# Distributed-NLP-Trend-Analysis

./: .gitignore  Makefile  README.md  TEAM_ASSIGNMENTS.md  TEAM_GUIDE.md  TECH_STACK.md  docker-compose.dev.yml  requirements.txt
ansible/: ansible.cfg  inventory.ini
ansible/inventory/: local_vms.ini
ansible/playbooks/: setup_airflow.yml  setup_clickhouse.yml  setup_conda.yml  setup_dbt.yml  setup_hdfs.yml  setup_java.yml  setup_spark.yml  site.yml
crawl_data/: README.md  pyproject.toml  setup.cfg  setup.py
crawl_data/crawl_data/: definitions.py
crawl_data/source/: tinhte.py  vatvo.py  voz.py
crawl_data/test/: check.ipynb  test.ipynb  vatvostudio_crawl.ipynb  voz.ipynb
dashboard/: app.py  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/components/: chart_theme.py  kpi_row.py  sidebar.py
dashboard/data/: __init__.py  queries.py
dashboard/pages/: 1_pg_overview.py  2_pg_trend_explorer.py  3_pg_crisis_monitor.py
data/: fixed_json.py  slang_dict_copy.json
notebooks/: lda_prototype.ipynb
preprocessing/: __init__.py  slang_normalizer.py  text_cleaner.py  vncorenlp_test.py  vncorenlp_tokenizer.py
research/: topic_modeling_notes.md
warehouse/: USER_GUIDE.md
warehouse/clickhouse/: docker-compose.yml  init_schema.sql
warehouse/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
warehouse/dbt_project/macros/: trend_score_calc.sql
warehouse/dbt_project/models/marts/: dim_influencers.sql  dim_topics.sql  fct_crisis_events.sql  (+2 more)
warehouse/dbt_project/tests/: assert_sentiment_ratios_valid.sql  assert_trend_score_not_null.sql
(+4 files in other folders)
